--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -1,200 +1,158 @@
 .footer {
-    background: url(../../assets/images/f__bg.png);
-    padding-top: 100px;
-    &__form {
+    &__container {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background: transparent;
-        box-shadow: none;
-        border-radius: 60px 7px 60px 7px;
         flex-direction: column;
+        padding: 42px 0 31px 0;
+        h2 {
+            padding: 0;
+            padding-bottom: 12px;
+            font-size: 1.9rem;
+        }
     }
-    &__label {
-        font-size: 1.2rem;
-        font-weight: 400;
-        text-transform: uppercase;
-        color: rgba(0, 0, 0, .45);
-        padding: 20px 70px;
-        text-align: center;
+    &__text {
+        margin: 0;
+        padding: 0;
+        font-size: .9rem;
+        font-family: Rubik, sans-serif;
+        font-weight: 300;
+        line-height: 1.8rem;
+        padding-bottom: 24px;
+    }
+    &__upper-text {
         width: 100%;
-        white-space: nowrap;
-        margin-bottom: 34px;
     }
-    &__input {
-        width: 90%;
-        padding: 18px 50px;
-        border-radius: 39px;
-        border: none;
-        background: linear-gradient(#fff, #fff);
-        font-size: 1.1rem;
-        &:focus {
-            outline: none;
-        }
-        &__icon {
-            position: absolute;
-            left: 9%;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 22px;
-        }
-        &__submit {
-            cursor: pointer;
-            position: absolute;
-            right: 7%;
-            top: 50%;
-            transform: translateY(-50%);
-            background: #154360;
-            padding: 10px 20px;
-            border-radius: 60px;
-            border: none;
-            color: #fff;
-        }
-        &__container {
-            position: relative;
-            background: #154360;
-            border-radius: 60px 7px 60px 0;
-            height: 97px;
+    form {
+        display: block;
+        position: relative;
+        width: 100%;
+        .form__inner {
+            box-shadow: 0px 4px 57px rgba(0, 0, 0, 0.09);
             width: 100%;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
+            input {
+                width: 70%;
+                border-radius: 4px 0 0 4px;
+                padding: 15px 20px;
+                border: 1px solid #ffffff;
+                font-style: normal;
+                font-weight: 300;
+                font-size: 16px;
+                line-height: 1.5;
+                font-family: Lato, sans-serif;
+                letter-spacing: 0em;
+                text-align: inherit;
+                text-transform: none;
+                color: #42474c;
+                &:focus {
+                    outline: none;
+                    border: 1px solid #e53b24;
+                }
+            }
+            button {
+                width: 30%;
+                padding: 20px 25px;
+                border-radius: 0 4px 4px 0;
+                border: 1px solid #ee5b24;
+                background-color: #e53b24;
+                color: #ffffff;
+                font-size: .7rem;
+                font-family: poppins, sans-serif;
+                letter-spacing: .2rem;
+                font-weight: 700;
+                cursor: pointer;
+                text-align: center;
+            }
         }
     }
-    &__container {
-        padding: 40px 0;
+    &__items {
         display: flex;
         justify-content: space-between;
+        align-items: flex-start;
+        padding: 60px 0 0 0;
         flex-wrap: wrap;
-        &__title {
-            font-size: 1.2rem;
-            font-weight: 500;
-            text-transform: uppercase;
-            color: #154360;
-            padding-bottom: 25px;
-        }
-        &__item:nth-child(1) {
-            width: 100%;
-            margin-bottom: 36px;
-        }
-        &__item:nth-child(2) {
-            width: 50%;
-        }
-        &__item:nth-child(3) {
-            width: 50%;
-        }
-        &__text {
-            font-size: 1.1rem;
-            font-weight: 400;
-            line-height: normal;
-            color: #626262;
-        }
-        &__link:link,
-        &__link:visited {
-            display: inline-block;
-            text-decoration: none;
-            font-size: 1.1rem;
-            color: #626262;
-            padding-bottom: 22px;
-        }
-        &__link::before,
-        &__link::before {
-            display: inline-block;
-            content: "";
-            width: 0;
-            height: 0;
-            border-top: 5px solid transparent;
-            border-bottom: 5px solid transparent;
-            border-left: 8px solid #ff0000;
-            margin-right: 22px;
-            vertical-align: middle;
-        }
-        &__flex {
-            padding-bottom: 26px;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            color: #626262;
-            img {
-                width: 16px;
-                margin-right: 16px;
-            }
-            span {
-                line-height: normal;
-            }
+    }
+    &__lower-container {
+        background: #444c5c;
+    }
+    &__item {
+        width: 100%;
+        padding-bottom: 32px;
+        span {
+            display: block;
+            padding-bottom: 12px;
+            color: #ffffff;
+            font-size: .9rem;
+            font-weight: 300;
+            line-height: 1.5rem;
         }
     }
-    &__social__icons {
-        padding-top: 28px;
-        img {
-            height: 17px;
-        }
-        a:link,
-        a:visited {
-            text-decoration: none;
-            margin-right: 15px;
+    &__title {
+        letter-spacing: .2rem;
+        font-family: Poppins, sans-serif;
+        text-transform: uppercase;
+        color: #969da1;
+        font-size: 1rem;
+        padding-bottom: 28px;
+    }
+    &__copy {
+        text-align: left;
+        background: #444c5c;
+        color: #ffffff;
+        font-size: .8rem;
+        font-weight: 300;
+        div {
+            border-top: 1px solid #ccc;
+            padding: 30px 0 33px 0;
         }
     }
-    &__bottom {
-        padding: 42px 0;
-        text-align: center;
+}
+
+@media only screen and (min-width: 540px) {
+    .footer__item {
+        width: 48%;
+    }
+}
+
+@media only screen and (min-width: 730px) {
+    .footer__container {
+        flex-direction: row;
+    }
+    .footer form {
+        width: 55%;
+    }
+    .footer__upper-text {
+        width: 40%;
+    }
+    .form__inner button {
+        width: 30%;
+    }
+    .footer__icon {
+        font-size: 1.4rem;
+        text-decoration: none;
+        color: #fff;
+        margin-right: 8px;
+        &:hover {
+            color: #e53b24;
+        }
+    }
+}
+
+@media only screen and (min-width: 980px) {
+    .footer__item {
+        width: 23%;
+        line-height: normal;
     }
 }
 
 @media only screen and (min-width: 1100px) {
-    .footer__form {
-        flex-direction: row;
-        background: #fff;
-        box-shadow: 0px 4px 90px rgba(0, 0, 0, 0.05);
+    .footer__upper-text {
+        width: 47%;
     }
-    .footer__input__container {
-        width: 78%;
-        border-radius: 0px 7px 60px 0;
-    }
-    .footer__label {
-        margin-bottom: 0px;
-        padding: 7px 70px;
-        width: 50%;
-    }
-    .footer__input {
-        padding: 18px 86px;
-    }
-    .footer__input__icon {
-        width: 30px;
-    }
-    .footer__container {
-        padding: 80px 0;
-    }
-}
-
-@media only screen and (min-width: 480px) {
-    .footer__input__submit {
-        padding: 10px 50px;
-    }
-    .footer__container__flex img {
-        width: 18px;
-        margin-right: 20px;
-    }
-}
-
-@media only screen and (min-width: 900px) {
-    .footer__container__item:nth-child(1) {
-        width: 32%;
-        margin-bottom: 0;
-    }
-    .footer__container__item:nth-child(2) {
-        width: 18%;
-        margin-bottom: 0;
-    }
-    .footer__container__item:nth-child(3) {
-        width: 32%;
-        margin-bottom: 0;
-    }
-    .footer__container__flex img {
-        width: 23px;
-        margin-right: 30px;
-    }
-    .footer__social__icons img {
-        height: 17px;
+    .footer form {
+        width: 47%;
     }
 }
