--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -24,6 +24,9 @@
         z-index: 4;
         left: 0;
     }
+    &__about {
+        min-height: 120px;
+    }
 }
 
 @media only screen and (min-width: 550px) {
