--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -16,9 +16,25 @@
 @import 'modules/_board.css';
 @import 'modules/_products.css';
 @import 'modules/_product-call.css';
-@import 'modules/_contact.css';
 @import 'modules/_contact-form.css';
 @import 'modules/_mobile-menu.css';
 @import 'modules/_modal.css';
 @import 'modules/_header-slider.css';
 @import 'modules/_hero.css';
+@import 'modules/_quote.css';
+@import 'modules/_call.css';
+@import 'swiper/css/swiper.min.css';
+@import 'modules/_brand.css';
+@import 'modules/_app-section.css';
+@import 'modules/_min-about.css';
+@import 'modules/_about-hero.css';
+@import 'modules/about/about-detail.css';
+@import 'modules/about/about-section.css';
+@import 'modules/about/about-content.css';
+@import 'modules/about/faq__content.css';
+@import 'global/_externals.css';
+@import 'modules/about/progress.css';
+@import 'modules/about/timeline.css';
+@import 'modules/contact/_contact-info.css';
+@import 'modules/_contact.css';
+@import 'modules/_faq-section.css';
