--- a/app/assets/styles/modules/_board.css
+++ b/app/assets/styles/modules/_board.css
@@ -15,13 +15,12 @@
     }
     &__section {
         padding: 50px 0;
-        margin-bottom: -120px;
     }
     &__container {
         width: 100%;
         position: relative;
-        background: #ED1C25;
-        border-radius: 9px;
+        background: #c7c7c7;
+        border-radius: 3px;
         /* display: flex;
         justify-content: center;
         align-items: center; */
@@ -40,10 +39,10 @@
     }
     &__content {
         background: #fff;
-        padding: 40px;
+        padding: 30px;
         width: 90%;
         box-shadow: 0px 4px 53px rgba(0, 0, 0, 0.12);
-        border-radius: 11px;
+        border-radius: 3px;
         position: relative;
         transform: translate(10%, -40%);
     }
@@ -51,6 +50,23 @@
         display: flex;
         justify-content: space-between;
         flex-direction: column;
+    }
+}
+
+@media only screen and (min-width: 560px) {
+    .board {
+        width: 100%;
+        padding: 30px 0;
+        margin-bottom: -60px;
+    }
+    .board__container {
+        width: 350px;
+    }
+    .board__section {
+        margin-bottom: 0;
+    }
+    .board:nth-child(even) .board__content {
+        left: 0%;
     }
 }
 
@@ -65,27 +81,17 @@
         align-self: flex-start;
     }
     .board__content {
-        width: 105%;
+        width: 122%;
         position: absolute;
         left: 75%;
+        padding: 40px;
         top: calc(50% + 22px);
         transform: translateY(-50%);
     }
     .board:nth-child(even) .board__content {
-        left: -88%;
-    }
-}
-
-@media only screen and (min-width: 560px) {
-    .board {
-        width: 448px;
-        padding: 30px 0;
-        margin-bottom: -60px;
-    }
-    .board__container {
-        width: 448px;
+        left: -100%;
     }
     .board__section {
-        margin-bottom: 0;
+        padding-bottom: 120px;
     }
 }
