--- a/app/assets/styles/modules/_contact-form.css
+++ b/app/assets/styles/modules/_contact-form.css
@@ -1,6 +1,6 @@
 .contact-form {
     width: 100%;
-    margin: 50px 0 70px 0;
+    float: left;
     &__input {
         width: 100%;
         border: none;
@@ -8,20 +8,34 @@
         padding: 0 0 8px 0;
         background: transparent;
     }
+    &__sub {
+        padding: 0;
+        color: #262d36;
+        font-weight: 500;
+        &::after {
+            content: "";
+            display: block;
+            height: 1px;
+            width: 80px;
+            background: rgb(214, 214, 214);
+            opacity: .5;
+            margin-top: 18px;
+        }
+    }
     &--msg {
         resize: none;
     }
     &__inner-container {
         position: relative;
-        padding-bottom: 60px;
+        margin-top: 40px;
         .contact-form__label {
             position: absolute;
             top: -3px;
             left: 0;
             cursor: text;
+            font-family: Lato, sans-serif;
             font-size: 1.2rem;
             color: #979797;
-            font-style: italic;
             font-weight: 300;
             transition: all .3s;
             &--keep {
@@ -43,25 +57,21 @@
         }
     }
     &__input-container {
-        padding: 16px 0px;
+        /* padding: 16px 0px; */
     }
     &__title {
         text-align: center;
-        color: #ED1C25;
+        color: #e53b24;
         font-weight: 600;
-        padding-bottom: 16px;
+        /* padding-bottom: 16px; */
     }
     &__submit {
-        background: transparent;
-        border: 1px solid #000;
-        padding: 14px 40px;
-        border-radius: 17px;
-        color: #ED1C25;
-    }
-}
-
-@media only screen and (min-width: 820px) {
-    .contact-form {
-        width: 40%;
+        padding: 14px 20px;
+        text-align: center;
+        letter-spacing: .13rem;
+        font-family: Poppins, sans-serif;
+        text-transform: uppercase;
+        font-size: .9rem;
+        border-radius: 4px;
     }
 }
