--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -2,79 +2,133 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    &__section {
-        padding: 80px 0;
-    }
-    &__inner__map {
-        box-shadow: 0px 4px 39px rgba(0, 0, 0, 0.19);
-        height: 300px;
-        width: 100%;
-    }
-    &__map {
-        position: relative;
-        width: 100%;
-        margin-left: 0%;
+    align-items: stretch;
+    flex-wrap: wrap;
+    &__title {
+        color: #FFFFFF;
+        padding: 0;
+        font-weight: 500;
+        &::after {
+            content: "";
+            display: block;
+            height: 1px;
+            width: 80px;
+            background: #ffffff;
+            opacity: .5;
+            margin-top: 18px;
+        }
     }
     &__item {
+        position: relative;
+        padding: 70px 0px 70px 30px;
+        padding-left: 0;
+        width: 100%;
+        &__inner {
+            width: 85%;
+            margin: 0 auto;
+            float: unset;
+            padding-right: 0px;
+            padding-left: 0;
+            position: relative;
+            &--adjusted {
+                float: unset;
+                padding-right: 0px;
+            }
+        }
+        &:nth-child(1) {
+            background: #42474c;
+            float: right;
+        }
+    }
+    p {
+        color: #ffffff;
+    }
+    &-de-p {
+        color: #f8f8f7;
+        text-transform: capitalize;
+        font-size: 1.4375rem;
+        font-family: Poppins, sans-serif;
+        font-weight: 600;
+        line-height: 1.8rem;
+        &--no-b-spacing {
+            padding-bottom: 0;
+        }
+        a {
+            color: #f8f8f7;
+            text-transform: capitalize;
+            font-size: 1.4375rem;
+            font-family: Poppins, sans-serif;
+            font-weight: 600;
+            line-height: 1.8rem;
+            text-decoration: none;
+        }
+    }
+    &-detail-item {
         display: flex;
         justify-content: flex-start;
         align-items: flex-start;
-        margin-top: 30px;
-        &__img {
-            width: 16px;
-            margin-right: 20px;
-            margin-top: 3px;
-        }
-        &s {
-            margin-top: 60px;
+        padding-bottom: 40px;
+        &:last-child {
+            padding-bottom: 0;
         }
     }
-}
-
-.mapouter {
-    position: relative;
-    text-align: right;
-    height: 300px;
-    width: 100%
-}
-
-.gmap_canvas {
-    overflow: hidden;
-    background: none!important;
-    height: 300px;
-    width: 100%;
-}
-
-@media only screen and (min-width: 1052px) {
-    .mapouter {
-        height: 500px;
+    .gen__text {
+        padding-top: 20px;
     }
-    .gmap_canvas {
-        height: 500px;
+    &__footer {
+        background-color: #934138;
+        .title__sub {
+            color: #ffffff;
+        }
+        .footer__text {
+            color: #ffffff;
+        }
     }
-    .contact__inner__map {
-        height: 500px;
+    .fa {
+        font-size: 2rem;
+        margin-right: 1em;
     }
 }
 
-@media only screen and (min-width: 820px) {
-    .contact__map {
-        width: 60%;
-        margin-left: 10%;
-    }
+@media only screen and (min-width: 790px) {
     .contact {
         flex-direction: row;
     }
+    .contact__item {
+        width: 50%;
+    }
+    /* .contact__item:nth-child(1) {
+        padding-left: 6%;
+    } */
+    .contact__item__inner:nth-child(1) {
+        float: right;
+        width: 85%;
+        padding-right: 50px;
+    }
+    .contact_item {
+        padding-left: 30px;
+        width: 100%;
+    }
+    .contact__item__inner--adjusted {
+        float: left;
+    }
+    .contact-form {
+        width: 93%;
+    }
 }
 
-@media only screen and (min-width: 520px) {
-    .contact__inner__map {
-        height: 500px;
+@media only screen and (min-width: 1440px) {
+    .contact__item__inner:nth-child(1) {
+        width: 585px;
     }
-    .mapouter {
-        height: 500px;
+    div.contact__item__inner--adjusted {
+        width: 585px;
+        float: left !important;
+        padding-left: 0px;
+        margin-left: 50px;
+        padding-right: 0;
     }
-    .gmap_canvas {
-        height: 500px;
+    .contact-form {
+        width: 100%;
     }
 }
