--- a/app/assets/styles/modules/_header-content.css
+++ b/app/assets/styles/modules/_header-content.css
@@ -15,22 +15,22 @@
         }
     }
     &__title {
-        font-size: 4rem;
-        letter-spacing: .2rem;
-        color: #154360;
+        font-size: 2.8rem;
+        letter-spacing: 0.02rem;
+        color: #ffffff;
         font-weight: 700;
+        font-family: Poppins, sans-serif;
         padding-bottom: 20px;
-        /* white-space: nowrap; */
-        font-style: italic;
+        line-height: 3.8rem;
     }
     &__txt {
-        font-family: Poppins;
+        font-family: Lato, sans-serif;
         font-style: normal;
         font-weight: 300;
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         line-height: 150.4%;
-        color: #333;
-        padding-bottom: 30px;
+        color: #ffffff;
+        padding-bottom: 18px;
     }
     &__img {
         width: 100%;
