--- a/app/assets/styles/modules/_header-slider.css
+++ b/app/assets/styles/modules/_header-slider.css
@@ -1,9 +1,9 @@
 .header__slider {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 115px);
     overflow: hidden;
     &__inner {
-        height: 100vh;
+        height: calc(100vh - 100px);
         width: 100%;
         display: flex;
         justify-content: center;
