--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -1,53 +1,3 @@
-.header__slider__inner.first {
-    background: url(../../assets/images/hero-one.png);
-    background-position: top center;
-    background-size: cover;
-}
-
-.header__slider__inner.second {
-    background: url(../../assets/images/hero-two.png);
-    background-position: top center;
-    background-size: cover;
-}
-
-.header__slider__inner.third {
-    background: url(../../assets/images/hero-three.png);
-    background-position: top center;
-    background-size: cover;
-}
-
-.header-about {
-    .header__slider__inner {
-        background: url(../../assets/images/about-bg.png);
-        background-position: top center;
-        background-size: cover;
-    }
-}
-
-.header-product {
-    .header__slider__inner {
-        background: url(../../assets/images/product-p.png);
-        background-position: top center;
-        background-size: cover;
-    }
-}
-
-.header-contact {
-    .header__slider__inner {
-        background: url(../../assets/images/contact-bgg.png);
-        background-position: top center;
-        background-size: cover;
-    }
-}
-
-.header-stories {
-    .header__slider__inner {
-        background: url(../../assets/images/stories-bg.png);
-        background-position: top center;
-        background-size: cover;
-    }
-}
-
 @media only screen and (min-width: 1100px) {
     .header__slider__inner.first {
         background: white;
@@ -64,19 +14,37 @@
 }
 
 .header__slider__inner.fourth {
-    background: url(../../assets/images/hero-one.png);
+    background: url(../../assets/images/heroo.jpg);
     background-position: top center;
     background-size: cover;
 }
 
 .header__slider__inner.fifth {
-    background: url(../../assets/images/hero-two.png);
+    background: url(../../assets/images/heroo-two.jpg);
     background-position: top center;
     background-size: cover;
 }
 
 .header__slider__inner.sixth {
-    background: url(../../assets/images/hero-three.png);
+    background: url(../../assets/images/herooo.jpg);
     background-position: top center;
     background-size: cover;
+}
+
+@media only screen and (max-width: 780px) {
+    .header__slider__inner.fourth {
+        background: url(../../assets/images/heroo.jpg);
+        background-position: center;
+        background-size: cover;
+    }
+    .header__slider__inner.fifth {
+        background: url(../../assets/images/heroo-two.jpg);
+        background-position: center;
+        background-size: cover;
+    }
+    .header__slider__inner.sixth {
+        background: url(../../assets/images/herooo.jpg);
+        background-position: center;
+        background-size: cover;
+    }
 }
