--- a/app/assets/styles/modules/_home-about.css
+++ b/app/assets/styles/modules/_home-about.css
@@ -4,11 +4,19 @@
     align-items: center;
     padding-top: 30px;
     flex-direction: column;
+    &__section {
+        padding: 50px 0 60px 0;
+        /* background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../../assets/images/pattern.png); */
+        background-size: cover;
+        /* background-attachment: fixed; */
+        background-position: center right;
+        background-repeat: no-repeat;
+        position: relative;
+    }
     &__img {
         box-shadow: 0px 4px 66px rgba(0, 0, 0, 0.17);
-        border-radius: 50%;
-        width: 95%;
-        margin: 30px 0;
+        border-radius: 4px;
+        width: 97%;
     }
     &__img-container {
         width: 100%;
@@ -17,7 +25,7 @@
     }
     &__text {
         width: 100%;
-        padding-left: 5%;
+        padding-top: 37px;
         position: relative;
         &__bg {
             position: absolute;
@@ -28,24 +36,79 @@
     }
     &__paragraph {
         font-size: 1.1rem;
-        padding-bottom: 16px;
-        line-height: normal;
+        padding-bottom: 22px;
+        font-weight: 300;
+        font-family: Lato, sans-serif;
+        color: #243238;
+        line-height: 1.9rem;
     }
     .link:link {
         padding-top: 30px;
     }
+    &__title {
+        position: relative;
+        padding-left: 22px;
+        margin-bottom: 28px;
+    }
+    &__title::before {
+        content: "";
+        background: #e1e3e4;
+        position: absolute;
+        left: 0;
+        height: 70%;
+        top: 15%;
+        width: 4px;
+    }
+    &-wrapper {
+        display: none;
+        &.active {
+            display: block;
+        }
+    }
+    &__menu {
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: stretch;
+        position: relative;
+        margin-bottom: 32px;
+        &-tab {
+            list-style: none;
+            font-family: Poppins;
+            cursor: pointer;
+            font-weight: 700;
+            font-size: .8rem;
+            letter-spacing: .1rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 33.3%;
+            color: #42474c;
+            padding: 20px 0;
+            background: #FFFFFF;
+            transition: all .2s linear;
+            &:hover {
+                background-color: rgb(119, 127, 143);
+                color: #fff;
+            }
+            &.active {
+                background-color: #444c5c;
+                color: #ffffff;
+            }
+        }
+    }
 }
 
-@media only screen and (min-width: 520px) {
+@media only screen and (min-width: 720px) {
     .home-about {
         flex-direction: row;
     }
     .home-about__img-container {
-        width: 40%;
+        width: 45%;
         margin: 0;
     }
     .home-about__text {
-        width: 60%;
+        width: 55%;
         padding: 0;
         padding-left: 5%;
     }
