--- a/app/assets/styles/modules/_menu_bar.css
+++ b/app/assets/styles/modules/_menu_bar.css
@@ -1,34 +1,13 @@
 .menu {
-    height: 100px;
-    position: fixed;
+    height: 115px;
+    position: relative;
     width: 100%;
-    background: transparent;
+    background: #fff;
     left: 0;
     top: 0;
+    font-family: Lato, 'Sans serif';
     transition: all .3s ease-in-out;
     z-index: 6;
-    &--up {
-        top: -300px;
-        opacity: 0;
-    }
-    &--down {
-        top: 0px;
-        background: #fff;
-        opacity: 1;
-        box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
-        &--no-shadow {
-            box-shadow: none;
-        }
-        .menu-icon__line {
-            background: #000;
-            &::after {
-                background: #000;
-            }
-            &::before {
-                background: #000;
-            }
-        }
-    }
     &__inner {
         height: 100%;
         display: flex;
@@ -44,23 +23,35 @@
     &__link:visited {
         text-decoration: none;
         color: #000;
-        margin-left: 60px;
+        margin-left: 50px;
+        font-family: Lato, sans-serif;
+        text-transform: capitalize;
+        line-height: 1.6rem;
         position: relative;
         display: none;
+        font-size: 1rem;
+        font-weight: 700;
+        transition: all .3s linear;
     }
-    &__link--active:link,
-    &__link--active:visited {
-        color: #000000;
+    &__link-btn:link,
+    &__link-btn:visited {
+        padding: 13px 35px;
+        border: 1px solid #bdbfc1;
+        border-radius: 7px;
+        font-size: .8rem;
+        margin-left: 115px;
+        color: #42474c;
+        transition: all .3 linear;
     }
-    &__link--active:link::before {
-        content: "";
-        height: 1.5px;
-        width: calc(100% + 10px);
-        background: #000000;
-        vertical-align: middle;
-        position: absolute;
-        top: 9px;
-        left: -5px;
+    &__link:link:hover,
+    &__link:visited:hover {
+        color: #e53b24;
+    }
+    &__link-btn:link:hover,
+    &__link-btn:visited:hover {
+        color: #ffffff;
+        background: #e53b24;
+        border-color: #e53b24;
     }
     &-icon {
         height: 28px;
@@ -73,7 +64,7 @@
         &__line {
             width: 100%;
             height: 2.7px;
-            background: #fff;
+            background: #000000;
             border-radius: 150px;
             transition: all .5s;
             margin-bottom: 2.5px;
@@ -84,7 +75,7 @@
                 display: block;
                 border-radius: 150px;
                 transform-origin: center;
-                background: #fff;
+                background-color: #000000;
                 position: absolute;
                 top: 0px;
                 transition: all .5s;
@@ -96,7 +87,7 @@
                 height: 2.7px;
                 display: block;
                 border-radius: 150px;
-                background: #fff;
+                background-color: #000000;
                 position: absolute;
                 bottom: 4px;
                 right: 0;
@@ -111,14 +102,14 @@
                     transform: rotate(-45deg);
                     top: 10px;
                     transform-origin: center;
-                    background: #000;
+                    background-color: #000;
                 }
                 &::before {
                     width: 100%;
                     transform: rotate(45deg);
                     top: 10px;
                     transform-origin: center;
-                    background: #000;
+                    background-color: #000;
                 }
             }
         }
