--- a/app/assets/styles/modules/_modal.css
+++ b/app/assets/styles/modules/_modal.css
@@ -21,7 +21,7 @@
     &__body {
         background: #FFFFFF;
         box-shadow: 0px 4px 75px rgba(0, 0, 0, 0.11);
-        border-radius: 13px;
+        border-radius: 6px;
         vertical-align: middle;
         height: 0;
         transition: transform .3s cubic-bezier(0.42, 0, 0.58, 1.0);
@@ -50,8 +50,11 @@
     &__title {
         font-size: 1.2rem;
         text-transform: uppercase;
-        font-weight: 400;
+        font-weight: 700;
+        letter-spacing: .07rem;
+        font-family: Poppins, sans-serif;
         line-height: 2rem;
+        color: #42474c;
     }
     &__close-btn {
         position: relative;
@@ -72,6 +75,7 @@
     }
     &__text {
         font-style: normal;
+        font-family: Lato, sans-serif;
         font-weight: 300;
         font-size: 1.2rem;
         line-height: 145.4%;
