--- a/app/assets/styles/modules/_paper.css
+++ b/app/assets/styles/modules/_paper.css
@@ -1,46 +1,74 @@
 .paper {
-    background: #fff;
+    background: transparent;
     width: 100%;
     border-radius: 4px 4px 7px 7px;
-    font-size: 1.3rem;
-    font-weight: 300;
-    padding: 36px 30px 20px 30px;
-    line-height: normal;
+    font-size: .75rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 0;
+    line-height: 1.6rem;
+    letter-spacing: .1rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    margin-bottom: 30px;
+    align-items: center;
+    font-family: poppins, sans-serif;
+    margin-bottom: 40px;
     position: relative;
-    width: 100%;
+    height: 100%;
+    color: #42474c;
     img {
-        width: 80px;
-        margin-right: 10%;
+        width: 48px;
+        margin-right: 0%;
     }
     span {
-        color: #ED1C25;
-        font-weight: 600;
-        font-size: 3rem;
+        color: #42474c;
+        font-weight: 300;
+        font-size: 1.5rem;
         display: block;
+        padding-top: 4px;
+        text-transform: lowercase;
+        text-align: center;
+        word-spacing: .01rem;
+        & span {
+            font-size: 1.9rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            display: inline-block;
+        }
     }
     &__container {
         display: flex;
         justify-content: space-between;
-        align-items: stretch;
-        padding: 80px 0;
+        align-items: center;
+        padding: 35px 0 20px 0;
         flex-wrap: wrap;
         position: relative;
     }
-}
-
-@media only screen and (min-width: 800px) {
-    .paper {
-        width: 48%;
+    &__section {
+        background-color: #f5f7f8;
+        padding: 34px 0;
     }
 }
 
-@media only screen and (min-width: 1280px) {
+@media only screen and (min-width: 440px) {
     .paper {
-        width: 32%;
+        width: 48%;
+        flex-direction: row;
+        align-items: flex-start;
+        text-align: unset;
+    }
+    .paper span {
+        text-align: left;
+    }
+    .paper img {
+        margin-right: 7%!important;
+    }
+}
+
+@media only screen and (min-width: 1180px) {
+    .paper {
+        width: 23%;
+        margin-bottom: 20px;
     }
 }
