--- a/app/assets/styles/modules/_product-call.css
+++ b/app/assets/styles/modules/_product-call.css
@@ -1,4 +1,4 @@
-.product-call {
+/* .product-call {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -53,4 +53,4 @@
         width: 60%;
         margin-top: 0px;
     }
-}
+} */
