--- a/app/assets/styles/modules/_products.css
+++ b/app/assets/styles/modules/_products.css
@@ -1,98 +1,76 @@
 .product {
     width: 100%;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 17px rgba(0, 0, 0, 0.25);
-    text-align: center;
-    padding: 40px 30px 60px;
-    position: relative;
-    overflow: hidden;
+    box-shadow: 0px 12px 30px rgba(0, 0, 0, 0.04);
+    background: #ffffff;
+    padding: 40px 30px;
+    border-radius: 6px;
     margin-bottom: 40px;
-    &--wide {
-        width: 100%;
-    }
-    .link:link,
-    .link:visited {
-        position: absolute;
-        right: 30px;
-        bottom: 50px;
-    }
-    &__circle {
-        width: 500px;
-        height: 500px;
-        background: transparent;
-        position: absolute;
-        z-index: 0;
-        border-radius: 50%;
-        border: 52px solid rgba(255, 229, 229, 0.44);
-        top: 12%;
-        right: 30%;
-        transform: translate(50%, -50%);
-    }
-    &__title {
-        font-size: 1.3rem;
-        font-weight: 500;
-        text-transform: uppercase;
-        padding: 8px 40px 38px 40px;
-        line-height: normal;
-        color: rgba(0, 0, 0, .8);
-        position: relative;
-        z-index: 3;
-        height: 80px;
-    }
-    &__icon {
-        width: 60%;
-        margin: 30px 0 80px 0;
-        position: relative;
-        z-index: 2;
-    }
-    .btn:link,
-    .btn:visited {
-        border-radius: 0;
-        min-width: 100%;
-        color: rgba(0, 0, 0, .8);
-    }
-    &__list-wrapper {
-        padding: 50px 0 40px 0;
-        list-style: none;
-        text-align: left;
-        li {
-            font-size: 1.2rem;
-            background: url(../../assets/images/check__bullet.png) left 4px no-repeat;
-            font-weight: 300;
-            line-height: normal;
-            padding-bottom: 20px;
-            padding-left: 32px;
-            vertical-align: top;
-        }
-    }
+    margin-right: 0;
     &s {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: stretch;
         flex-wrap: wrap;
     }
+    &__title {
+        text-transform: uppercase;
+        font-weight: 700;
+        font-family: poppins, sans-serif;
+        line-height: 1.9rem;
+        font-size: 1rem;
+        padding-bottom: 10px;
+        letter-spacing: .08rem;
+        color: #262d36;
+    }
+    &__details {
+        font-family: lato, sans-serif;
+        line-height: 1.7rem;
+        font-size: 1rem;
+        font-weight: 300;
+    }
+    &__link {
+        font-style: italic;
+        color: #e53b24;
+        text-decoration: none;
+        font-weight: bold;
+        white-space: nowrap;
+        &:hover {
+            border-bottom: 1px solid #e53b24;
+        }
+    }
+    .btn {
+        padding: 12px 25px;
+    }
     &__section {
-        padding: 60px 0;
+        padding: 70px 0;
+        &--inner {
+            margin-bottom: 30px;
+        }
         .title {
-            padding: 20px 0 50px;
-        }
-        &--white {
-            background: #FFFFFF;
+            margin-bottom: 27px;
         }
     }
 }
 
-@media only screen and (min-width: 820px) {
+@media only screen and (min-width: 600px) {
     .product {
-        width: 48.5%;
+        width: 48%;
+        margin-right: 4%;
     }
-    .product--wide {
-        width: 48.5%;
+    .product:nth-child(2n) {
+        margin-right: 0;
     }
 }
 
-@media only screen and (min-width: 1320px) {
+@media only screen and (min-width: 980px) {
     .product {
-        width: 31.5%;
+        width: 31%;
+        margin-right: 3.5%;
+    }
+    .product:nth-child(2n) {
+        margin-right: 3.5%;
+    }
+    .product:nth-child(3n) {
+        margin-right: 0;
     }
 }
