--- a/app/assets/styles/modules/_team.css
+++ b/app/assets/styles/modules/_team.css
@@ -8,8 +8,13 @@
     flex-direction: column;
     &s {
         h2.title {
-            padding-bottom: 60px;
+            /* padding-bottom: 60px; */
+            margin-bottom: 50px;
         }
+    }
+    &__section {
+        background-color: #ffffff;
+        padding: 50px 0;
     }
     &__container {
         display: flex;
@@ -28,17 +33,25 @@
     &__content {
         .link:link,
         .link:visited {
-            font-size: 1.2rem;
+            font-size: .9rem;
+            display: inline;
+            font-style: italic;
+            text-transform: lowercase;
+            font-family: lato, sans-serif;
+            font-weight: 500;
             span {
                 img {
                     width: 25px;
                 }
             }
         }
+        padding-left: 0px;
         &__text {
-            line-height: 30px;
-            font-size: 1.2rem;
-            padding-bottom: 19px;
+            line-height: 1.8;
+            font-weight: 300;
+            font-size: 1rem;
+            font-family: lato, sans-serif;
+            padding-top: 7px;
             color: rgba(0, 0, 0, .7);
             &__dots {
                 display: inline;
@@ -48,16 +61,18 @@
             }
         }
         &__title {
-            font-weight: 400;
-            text-transform: uppercase;
-            border-bottom: 1px solid #333;
+            font-weight: 700;
+            font-family: poppins, sans-serif;
+            text-transform: capitalize;
             font-size: 1.3rem;
+            color: #262d36;
             padding-bottom: 5px;
-            margin-bottom: 9px;
+            margin-bottom: 5px;
             display: inline-block;
             &__sub {
                 font-weight: 700;
-                color: #ED1C25;
+                font-family: lato, sans-serif;
+                color: #e53b24;
                 text-transform: capitalize;
                 font-size: 1.2rem;
                 padding-bottom: 8px;
@@ -66,6 +81,19 @@
                 }
             }
         }
+    }
+}
+
+@media only screen and (min-width: 520px) {
+    .team {
+        flex-direction: row;
+    }
+    .team__img {
+        width: 30%;
+        margin-bottom: 0px;
+    }
+    .team__content {
+        padding-left: 18px;
     }
 }
 
@@ -97,14 +125,7 @@
     .team__content .link:visited span img {
         width: 40px;
     }
-}
-
-@media only screen and (min-width: 520px) {
-    .team {
-        flex-direction: row;
-    }
-    .team__img {
-        width: 30%;
-        margin-bottom: 0px;
+    .team__section {
+        padding: 100px 0;
     }
 }
