--- a/app/assets/styles/modules/_header-content.css
+++ b/app/assets/styles/modules/_header-content.css
@@ -37,12 +37,20 @@
     }
 }
 
+@media only screen and (min-width: 780px) {
+    .header-content__title {
+        font-size: 3.6rem;
+        line-height: 5rem;
+        font-weight: 500;
+    }
+}
+
 @media only screen and (min-width: 1100px) {
     .header-content>div:last-child {
         display: initial;
     }
     .header-content>div:nth-child(1) {
-        width: 60%;
+        width: 90%;
         padding-right: 4%
     }
     .header-content>div:nth-child(2) {
