--- a/app/assets/styles/modules/about/faq__content.css
+++ b/app/assets/styles/modules/about/faq__content.css
@@ -30,6 +30,7 @@
             color: #42474c;
             font-weight: 700;
             font-size: 1.3rem;
+            line-height: 1.5;
             font-family: Lato, sans-serif;
         }
     }
