--- a/app/assets/styles/modules/_mobile-menu.css
+++ b/app/assets/styles/modules/_mobile-menu.css
@@ -16,12 +16,12 @@
         justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
-        padding: 20% 0;
+        padding: 25% 0 10% 0;
     }
     &__link:link,
     &__link:visited {
         color: #ED1C25;
-        font-size: 2.7rem;
+        font-size: 1.3rem;
         text-align: center;
         font-family: Lato, sans-serif;
         font-weight: 600;
