added terms and policy page

--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -1,4 +1,8 @@
 .footer {
+    &__link{
+        color: #fff;
+        text-decoration: none;
+    }
     &__container {
         display: flex;
         justify-content: space-between;
