--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -38,3 +38,4 @@
 @import 'modules/contact/_contact-info.css';
 @import 'modules/_contact.css';
 @import 'modules/_faq-section.css';
+@import 'modules/_terms.css';
